# sslam

./: .gitignore  CMakeLists.txt  README.md
config/: default.yaml
include/sslam/: camera.hpp  config.hpp  frame.hpp  map.hpp  ui.hpp  visual_odometry.hpp
src/: CMakeLists.txt  camera.cpp  config.cpp  frame.cpp  g2o_types.cpp  g2o_types.hpp  ui.cpp  visual_odometry.cpp
test/: CMakeLists.txt  test_visual_odometry.cpp
